FOS-Rest bundle setup

--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,3 +1,9 @@
 controllers:
+    host: 'symfony.fr'
     resource: ../../src/Controller/
+    type: annotation
+
+api_controller:
+    host: 'api.symfony.fr'
+    resource: ../../src/ApiController/
     type: annotation
