--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,6 +1,7 @@
 framework:
     secret: '%env(APP_SECRET)%'
-    #default_locale: en
+    serializer : {enabled: true}
+    default_locale: fr
     #csrf_protection: true
     #http_method_override: true
 
