--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -5,5 +5,5 @@ fos_rest:
     enabled: true
   format_listener:
     rules:
-      - { host: api.symfony.fr, path: ^/, prefer_extension: true, fallback_format: json, priorities: [ json ] }
-      - { host: symfony.fr, path: ^/, priorities: [ html ], fallback_format: html}
+      - { host: api.symf.fr, path: ^/, prefer_extension: true, fallback_format: json, priorities: [ json ] }
+      - { host: symf.fr, path: ^/, priorities: [ html ], fallback_format: html}
