--- a/config/packages/swiftmailer.yaml
+++ b/config/packages/swiftmailer.yaml
@@ -1,3 +1,8 @@
 swiftmailer:
-    url: '%env(MAILER_URL)%'
+    delivery_addresses: ['pierretisserand31@gmail.com']
+    transport: smtp
+    encryption: ssl
+    host: smtp.gmail.com
+    username: pierretisserand31@gmail.com
+    password: tales789
     spool: { type: 'memory' }
